<resources>
    <string name="app_name">HabitApp</string>
    <string name="title_login_page">login\n</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="error_enter_email">Enter your email first!</string>
    <string name="invalid_email">Invalid email format!</string>
    <string name="error_passrword">Enter your password first!</string>
    <string name="password_leght">Password Legth must have at least 6 character</string>
    <string name="enter_your_name">Enter your name\n</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="error_enter_username">Enter your username first!</string>
    <string name="passwords_do_not_match">Password do not match!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">My Habit</string>
    <string name="title_dashboard">Add Habit</string>
    <string name="title_notifications">Statistic</string>

    <!-- Notification -->
    <string name="pref_key_notify">key_notification</string>
    <string name="pref_notify_name">Notification</string>
    <string name="pref_notify_summary">Reminder when countdown has finished.</string>
    <string name="notify_channel_name">Habit Reminder</string>
    <string name="notify_content">Time Up!</string>
</resources>